# CVG-Rainfall-Wizard

./: .dockerignore  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.patch  LICENSE.md  README.md  ROADMAP.md  SECURITY.md  deploy_production.sh  docker-compose.prod.yml  docker-compose.yml  neuron_webhook.py  pyproject.toml  pytest.ini  requirements-lock.txt  requirements-web.txt  run_cov.bat  run_tests.bat  run_tests.py  sample_config.json  start-dev.bat  start-prod-direct.bat  write_tests.py
.github/workflows/: ci.yml
05_ChangeLogs/: file_version_index.csv  master_changelog.md  version_manifest.yml
Research/: README.md
caddy/: Caddyfile
docs/: API_REFERENCE.md  DEPLOYMENT_RAINFALL_WEB.md  index.md
gov/: README.md
portal/: Dockerfile  app.py  requirements.txt
portal/templates/: dashboard.html
rainfall_wizard/: __init__.py  cli.py  config.py  core.py  idf.py  insights.py  io.py  monitoring.py  noaa.py  paths.py  pfds.py  processing.py  recovery.py  report.py  runoff.py  web.py  web_api.py
rainfall_wizard/demo_data/: demo_config.json
rainfall_wizard/templates/: index.html  (+3 more)
scripts/: _add_cvg_headers.py  _scan_and_fix_headers.py  _verify_all.py  bootstrap_rainfall_vm.sh  run_rainfall.py
tests/: __init__.py  chk3.txt  conftest.py  test_config.py  test_idf.py  test_insights.py  test_monitoring.py  test_noaa.py  test_rainfall_wizard.py  test_recovery.py  test_report.py  test_runoff.py  test_web_api.py
tools/: README.md  _check_external.py  batch_report_gen.py  cache_pfds_bulk.py  cn_raster_from_nlcd.py  idf_curve_plotter.py  validate_dem.py
(+1 files in other folders)
