[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rainfall-wizard"
version = "1.1.0"
description = "CVG Rainfall Wizard — NOAA PFDS rainfall frequency analysis and flood depth grid generation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    # Core flood depth engine (DEM processing, raster I/O, VDatum, SLR)
    "storm-surge-wizard>=1.4.1",
    # Web API
    "fastapi>=0.110",
    "uvicorn>=0.27",
    # CLI
    "click>=8.1",
    # Raster + spatial
    "rasterio>=1.3.9",
    "numpy>=1.26",
    "fiona>=1.9",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://www.clearviewgeographic.com"
Repository = "https://github.com/clearview-geographic"

[project.scripts]
rainfall-wizard = "rainfall_wizard.cli:main"

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rainfall_wizard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
